test/expected/declare_lb.out
declare x as long bool
        ^
9: error: "long bool" is illegal for built-in type
